// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders UnitagName with a name 1`] = `
<View
  collapsable={false}
  forwardedRef={[Function]}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {
        "opacity": 0,
      },
    }
  }
  jestInlineStyle={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
      },
    ]
  }
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
      },
      {
        "opacity": 0,
      },
    ]
  }
  testID="testing.uni.eth"
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "Basel Grotesk",
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 40,
      }
    }
    suppressHighlighting={true}
  >
    testing
  </Text>
  <View
    collapsable={false}
    forwardedRef={[Function]}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "opacity": 0,
          "right": -24,
          "top": -4,
          "transform": [
            {
              "translateX": 20,
            },
            {
              "scale": 0.8,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "flexDirection": "row",
          "marginLeft": 4,
          "position": "absolute",
        },
      ]
    }
    style={
      [
        {
          "flexDirection": "row",
          "marginLeft": 4,
          "position": "absolute",
        },
        {
          "opacity": 0,
          "right": -24,
          "top": -4,
          "transform": [
            {
              "translateX": 20,
            },
            {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  />
</View>
`;

exports[`renders UnitagName without a name 1`] = `
<View
  collapsable={false}
  forwardedRef={[Function]}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {
        "opacity": 0,
      },
    }
  }
  jestInlineStyle={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
      },
    ]
  }
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
      },
      {
        "opacity": 0,
      },
    ]
  }
  testID="undefined.uni.eth"
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "Basel Grotesk",
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 40,
      }
    }
    suppressHighlighting={true}
  />
  <View
    collapsable={false}
    forwardedRef={[Function]}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "right": -24,
          "top": -4,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "flexDirection": "row",
          "marginLeft": 4,
          "position": "absolute",
        },
      ]
    }
    style={
      [
        {
          "flexDirection": "row",
          "marginLeft": 4,
          "position": "absolute",
        },
        {
          "right": -24,
          "top": -4,
        },
      ]
    }
  />
</View>
`;
